apps/pihole/pihole-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-ingress
  namespace: default
  annotations:
    ingress.cilium.io/loadbalancer-class: cilium
spec:
  ingressClassName: cilium
  rules:
  - host: pihole.homelab.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pihole-service
            port:
              number: 80
